# mapmanager

./: .gitignore  CMakeLists.txt  Makefile.am  Makefile.in  README  array.c  configure  configure.ac  list.c  main.c  map.h  record.c
mapmanager.xcodeproj/: project.pbxproj
mapmanager.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
mapmanager.xcodeproj/project.xcworkspace/xcuserdata/zxf.xcuserdatad/: UserInterfaceState.xcuserstate
mapmanager.xcodeproj/xcuserdata/zxf.xcuserdatad/xcschemes/: xcschememanagement.plist
